--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>com.erudika</groupId>
 	<artifactId>lucene-s3directory</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 	<name>Lucene S3 Directory</name>
@@ -42,7 +42,7 @@
 		<connection>scm:git:https://github.com/albogdano/lucene-s3directory.git</connection>
 		<developerConnection>scm:git:https://github.com/albogdano/lucene-s3directory.git</developerConnection>
 		<url>https://github.com/albogdano/lucene-s3directory</url>
-		<tag>1.0.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
